<resources>
    <string name="app_name">FlowShowcase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="counter">Counter</string>
    <string name="click_me">Click me!</string>
    <string name="todolist_fragment">toDoList Fragment</string>
    <string name="typing_fragment">Typing fragment</string>
    <string name="task_title">Task title</string>
    <string name="begin_typing">Begin typing</string>
    <string name="typing_page">Typing Page</string>
    <string name="typing">Typing. . .</string>
    <string name="task_list_fragment">Task List Fragment</string>
    <string name="counter_fragment">Counter Fragment</string>
</resources>