<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragmentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="95dp"
        android:text="@string/task_list_fragment"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/fragmentTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/typingFragmentButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="75dp"
        android:text="@string/typing_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/counterFragmentButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/counterFragmentButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="75dp"
        android:text="@string/counter_fragment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/typingFragmentButton"
        app:layout_constraintTop_toBottomOf="@id/recyclerView" />


</androidx.constraintlayout.widget.ConstraintLayout>